<resources>
    <string name="app_name">Shake2021</string>
    <string name="action_settings">Settings</string>
    <string name="switch_color">Shake to switch color</string>
    <string name="orientation">Orientation</string>
    <string name="title_activity_home__page">Home_Page</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview">TextView</string>
    <string name="smart_telescope_app">Smart Telescope App</string>
    <string name="the_current_time_is">The Current Time is -</string>
    <string name="time">time</string>
    <string name="intro">Please select a star you would like to see below</string>
    <string name="intro1">To calibrate your phone, you will have to first face true north</string>
    <string name="intro2">Turn in the plain of the ground and then face upwards</string>
    <string name="dropDown">Click here for list of Stars</string>
    <string name="Previous">Previous Searches</string>
    <string name="star_information_page">Star - Information Page</string>
    <string name="go_back">Go Back</string>

    <string name="Star_Info_Intro">This page will show you the information of your selected star</string>
    <string name="User_Location_Info">The next page will show you your current location and then
        guide you to true north before guiding you to the star</string>
    <string name="create_new_star">Create New Star</string>
    <string name="newStarInfo">This page will allow you to create a new star. Please enter the Right Declination and the Azimuth of the star as well as the name. The app will direct you to this star once it has been saved on your device.</string>

</resources>